--- a/.github/workflows/mac-fedora.yml
+++ b/.github/workflows/mac-fedora.yml
@@ -23,7 +23,7 @@ jobs:
           top -l 1 -s 0 | grep PhysMem
           df -h .
 
-      - name: Install Ansible packages
+      - name: Install packages
         run: |
           brew install ansible gnu-sed hudochenkov/sshpass/sshpass
 
@@ -32,7 +32,7 @@ jobs:
           RAM: 4096
         run: |
           vagrant init fedora/32-cloud-base
-          sed -i "/Vagrant.configure(\"2\") do |config|/a \ \ config.vm.provider \"virtualbox\" do |vb|\n \ \ \ \ vb.memory = \"${RAM}\"\n \ end" Vagrantfile
+          gsed -i "/Vagrant.configure(\"2\") do |config|/a \ \ config.vm.provider \"virtualbox\" do |vb|\n \ \ \ \ vb.memory = \"${RAM}\"\n \ end" Vagrantfile
           vagrant up
 
       - name: Add main user to Fedora VirtualBox VM
@@ -44,5 +44,6 @@ jobs:
           ansible-playbook --user="${MYUSER}" --extra-vars "ansible_password=${PASSWORD} ansible_become_password=${PASSWORD} ansible_port=2222" main.yml -i "127.0.0.1,"
 
       - name: Destroy VM
+        if: ${{ always() }}
         run: |
           vagrant destroy --force
