--- a/.github/workflows/mac-fedora.yml
+++ b/.github/workflows/mac-fedora.yml
@@ -11,6 +11,10 @@ on:
     paths:
       - .github/workflows/mac-fedora.yml
 
+env:
+  ANSIBLE_HOST_KEY_CHECKING: False
+  ANSIBLE_PORT: 2222
+
 jobs:
   mac-fedora:
     runs-on: macos-latest
@@ -37,11 +41,11 @@ jobs:
 
       - name: Add main user to Fedora VirtualBox VM
         run: |
-          ansible --become --user vagrant --extra-vars "ansible_password=vagrant ansible_port=2222 host_key_checking=false" -m user -a "name=${MYUSER} password={{ \"${PASSWORD}\" | password_hash('sha512') }} append=yes groups=wheel" -i "127.0.0.1," 127.0.0.1
+          ansible --become --user vagrant --extra-vars "ansible_password=vagrant" -m user -a "name=${MYUSER} password={{ \"${PASSWORD}\" | password_hash('sha512') }} append=yes groups=wheel" -i "127.0.0.1," 127.0.0.1
 
       - name: Ansible
         run: |
-          ansible-playbook --user="${MYUSER}" --extra-vars "ansible_password=${PASSWORD} ansible_become_password=${PASSWORD} ansible_port=2222 host_key_checking=false" main.yml -i "127.0.0.1,"
+          ansible-playbook --user="${MYUSER}" --extra-vars "ansible_password=${PASSWORD} ansible_become_password=${PASSWORD}" main.yml -i "127.0.0.1,"
 
       - name: Destroy VM
         if: ${{ always() }}
