--- a/.github/workflows/mac-fedora.yml
+++ b/.github/workflows/mac-fedora.yml
@@ -1,19 +1,20 @@
 name: mac-fedora
 
 on:
-  pull_request:
-    types: [opened, synchronize]
-    paths:
-      - .github/workflows/mac-fedora.yml
-      - vars/**
-      - tasks/**
-  push:
-    branches:
-      - master
-    paths:
-      - .github/workflows/mac-fedora.yml
-      - vars/**
-      - tasks/**
+  repository_dispatch:
+  # pull_request:
+  #   types: [opened, synchronize]
+  #   paths:
+  #     - .github/workflows/mac-fedora.yml
+  #     - vars/**
+  #     - tasks/**
+  # push:
+  #   branches:
+  #     - master
+  #   paths:
+  #     - .github/workflows/mac-fedora.yml
+  #     - vars/**
+  #     - tasks/**
 
 env:
   MYUSER: pruzicka
