--- a/.github/workflows/mac-test.yml
+++ b/.github/workflows/mac-test.yml
@@ -1,17 +1,18 @@
 name: mac-test
 
 on:
-  pull_request:
-    types: [opened, synchronize]
-    paths:
-      - tasks/**
-      - .github/workflows/mac-test.yml
-  push:
-    branches:
-      - master
-    paths:
-      - tasks/**
-      - .github/workflows/mac-test.yml
+  repository_dispatch:
+  # pull_request:
+  #   types: [opened, synchronize]
+  #   paths:
+  #     - tasks/**
+  #     - .github/workflows/mac-test.yml
+  # push:
+  #   branches:
+  #     - master
+  #   paths:
+  #     - tasks/**
+  #     - .github/workflows/mac-test.yml
 
 jobs:
   mac-test:
