--- a/.github/workflows/ubuntu-server.yml
+++ b/.github/workflows/ubuntu-server.yml
@@ -27,8 +27,10 @@ on:
 
 jobs:
   ubuntu-server:
+    name: "*"
     runs-on: macos-latest
     strategy:
+      fail-fast: false
       matrix:
         stage:
           - ubuntu-20.04-server-amd64-virtualbox
