--- a/.github/workflows/ubuntu-server.yml
+++ b/.github/workflows/ubuntu-server.yml
@@ -34,8 +34,8 @@ jobs:
       matrix:
         stage:
           - ubuntu-20.04-server-amd64-virtualbox
-          - ubuntu-18.04-server-amd64-virtualbox
-          - ubuntu-16.04-server-amd64-virtualbox
+          # - ubuntu-18.04-server-amd64-virtualbox
+          # - ubuntu-16.04-server-amd64-virtualbox
     steps:
       - uses: actions/checkout@v2
 
@@ -46,14 +46,11 @@ jobs:
 
       - name: Build image - ${{ matrix.stage }}
         run: |
-          export PATH=/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin:${PATH}
+          #export PATH=/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin:${PATH}
+          export PATH=/usr/local/opt/coreutils/libexec/gnubin:${PATH}
           ./build.sh ${{ matrix.stage }}
 
       - name: Check the created box image - ${{ matrix.stage }}
         run: |
-          export PATH=/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin:${PATH}
+          export PATH=/usr/local/opt/gnu-sed/libexec/gnubin:${PATH}
           ./vagrant_init_destroy_boxes.sh /var/tmp/packer-templates-images/${{ matrix.stage }}.box
-
-      - name: Check /var/tmp/packer-templates-images
-        run: |
-          ls -la /var/tmp/packer-templates-images/
