--- a/.github/workflows/ubuntu-server.yml
+++ b/.github/workflows/ubuntu-server.yml
@@ -41,7 +41,8 @@ jobs:
 
       - name: Install packages
         run: |
-          brew install ansible coreutils gnu-sed packer
+          # brew install ansible coreutils gnu-sed packer
+          brew install ansible coreutils packer
           echo $PATH
 
       - name: Build image - ${{ matrix.stage }}
@@ -52,5 +53,6 @@ jobs:
 
       - name: Check the created box image - ${{ matrix.stage }}
         run: |
-          export PATH=/usr/local/opt/gnu-sed/libexec/gnubin:${PATH}
+          # export PATH=/usr/local/opt/gnu-sed/libexec/gnubin:${PATH}
+          export PATH=/usr/local/opt/coreutils/libexec/gnubin:${PATH}
           ./vagrant_init_destroy_boxes.sh /var/tmp/packer-templates-images/${{ matrix.stage }}.box
