--- a/.github/workflows/ubuntu-server.yml
+++ b/.github/workflows/ubuntu-server.yml
@@ -33,22 +33,23 @@ jobs:
       fail-fast: false
       matrix:
         stage:
-          - ubuntu-20.04-server-amd64-virtualbox
-          - ubuntu-18.04-server-amd64-virtualbox
-          - ubuntu-16.04-server-amd64-virtualbox
+          - ubuntu-20.04-server-amd64-libvirt
+          # - ubuntu-20.04-server-amd64-virtualbox
+          # - ubuntu-18.04-server-amd64-virtualbox
+          # - ubuntu-16.04-server-amd64-virtualbox
     steps:
       - uses: actions/checkout@v2
 
       - name: Install packages
         run: |
-          brew install ansible coreutils gnu-sed packer
+          brew install coreutils gnu-sed packer qemu
 
       - name: Build image - ${{ matrix.stage }}
         run: |
           export PATH=/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin:${PATH}
           ./build.sh ${{ matrix.stage }}
 
-      - name: Check the created box image - ${{ matrix.stage }}
-        run: |
-          export PATH=/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin:${PATH}
-          ./vagrant_init_destroy_boxes.sh /var/tmp/packer-templates-images/${{ matrix.stage }}.box
+      # - name: Check the created box image - ${{ matrix.stage }}
+      #   run: |
+      #     export PATH=/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin:${PATH}
+      #     ./vagrant_init_destroy_boxes.sh /var/tmp/packer-templates-images/${{ matrix.stage }}.box
