--- a/.github/workflows/windows-10.yml
+++ b/.github/workflows/windows-10.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Install packages
         run: |
           brew install ansible coreutils gnu-sed packer
+          pip3 install pywinrm
 
       - name: Build image - ${{ matrix.stage }}
         run: |
