--- a/.github/workflows/ubuntu-server.yml
+++ b/.github/workflows/ubuntu-server.yml
@@ -45,9 +45,12 @@ jobs:
           brew install coreutils gnu-sed packer qemu
 
       - name: Build image - ${{ matrix.stage }}
+        env:
+          ACCELERATOR=hvf
+          OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
         run: |
           export PATH=/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin:${PATH}
-          PACKER_LOG=1 ./build.sh ${{ matrix.stage }}
+          ./build.sh ${{ matrix.stage }}
 
       # - name: Check the created box image - ${{ matrix.stage }}
       #   run: |
