--- a/.github/workflows/build-tests/ubuntu-server.yml
+++ b/.github/workflows/build-tests/ubuntu-server.yml
@@ -1,56 +1,53 @@
-name: windows-10
+name: ubuntu-server
 
 on:
   pull_request:
     types: [opened, synchronize]
     paths:
-      - .github/workflows/windows-10.yml
-      - ansible/roles/ansible-role-virtio-win/**
-      - ansible/win-simple.yml
+      - .github/workflows/ubuntu-server.yml
       - build.sh
       - http/ubuntu-server/**
-      - scripts/win-common/**
-      - Vagrantfile-windows.template
-      - win_iso.sha256
-      - windows.json
+      - scripts/linux-common/**
+      - scripts/ubuntu/**
+      - ubuntu-server.json
+      - vagrant_init_destroy_boxes.sh
+      - Vagrantfile-linux.template
   push:
     branches:
       - master
     paths:
-      - .github/workflows/windows-10.yml
-      - ansible/roles/ansible-role-virtio-win/**
-      - ansible/win-simple.yml
+      - .github/workflows/ubuntu-server.yml
       - build.sh
       - http/ubuntu-server/**
-      - scripts/win-common/**
-      - Vagrantfile-windows.template
-      - win_iso.sha256
-      - windows.json
+      - scripts/linux-common/**
+      - scripts/ubuntu/**
+      - ubuntu-server.json
+      - vagrant_init_destroy_boxes.sh
+      - Vagrantfile-linux.template
 
 env:
   ACCELERATOR: hvf
-  # https://github.com/ansible/ansible/issues/32499
-  OBJC_DISABLE_INITIALIZE_FORK_SAFETY: YES
 
 jobs:
-  windows-10:
+  ubuntu-server:
     name: "*"
     runs-on: macos-latest
     strategy:
       fail-fast: false
       matrix:
         stage:
-          - windows-10-enterprise-x64-eval-virtualbox
-          - windows-10-enterprise-x64-eval-libvirt
+          - ubuntu-20.04-server-amd64-virtualbox
+          - ubuntu-18.04-server-amd64-virtualbox
+          - ubuntu-16.04-server-amd64-virtualbox
+          - ubuntu-20.04-server-amd64-libvirt
+          - ubuntu-18.04-server-amd64-libvirt
+          - ubuntu-16.04-server-amd64-libvirt
     steps:
       - uses: actions/checkout@v2
-        with:
-          submodules: true
 
       - name: Install packages
         run: |
-          brew install ansible coreutils gnu-sed packer qemu
-          pip3 install pywinrm
+          brew install coreutils gnu-sed packer qemu
 
       - name: Build image - ${{ matrix.stage }}
         run: |
