--- a/.github/workflows/build-tests/windows-2016.yml
+++ b/.github/workflows/build-tests/windows-2016.yml
@@ -1,51 +1,54 @@
-name: ubuntu-server
+name: windows-2016
 
 on:
   pull_request:
     types: [opened, synchronize]
     paths:
-      - .github/workflows/ubuntu-server.yml
-      - ubuntu-server.json
-      - Vagrantfile-linux.template
+      - .github/workflows/windows-2016.yml
+      - ansible/roles/ansible-role-virtio-win/**
+      - ansible/win-simple.yml
       - build.sh
-      - templates/ubuntu.md
-      - scripts/ubuntu/**
-      - scripts/linux-common/**
-      - http/ubuntu-server/**
+      - http/windows-2016/**
+      - scripts/win-common/**
+      - Vagrantfile-windows.template
+      - win_iso.sha256
+      - windows.json
   push:
     branches:
       - master
     paths:
-      - .github/workflows/ubuntu-server.yml
-      - ubuntu-server.json
-      - Vagrantfile-linux.template
+      - .github/workflows/windows-2016.yml
+      - ansible/roles/ansible-role-virtio-win/**
+      - ansible/win-simple.yml
       - build.sh
-      - templates/ubuntu.md
-      - scripts/ubuntu/**
-      - scripts/linux-common/**
-      - http/ubuntu-server/**
+      - http/windows-2016/**
+      - scripts/win-common/**
+      - Vagrantfile-windows.template
+      - win_iso.sha256
+      - windows.json
 
 env:
-  ACCELERATOR: hvf
+  # https://github.com/ansible/ansible/issues/32499
+  OBJC_DISABLE_INITIALIZE_FORK_SAFETY: YES
 
 jobs:
-  ubuntu-server:
+  windows-2016:
     name: "*"
     runs-on: macos-latest
     strategy:
       fail-fast: false
       matrix:
         stage:
-          - ubuntu-20.04-server-amd64-libvirt
-          # - ubuntu-20.04-server-amd64-virtualbox
-          # - ubuntu-18.04-server-amd64-virtualbox
-          # - ubuntu-16.04-server-amd64-virtualbox
+          - windows-server-2016-standard-x64-eval-virtualbox
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: true
 
       - name: Install packages
         run: |
-          brew install coreutils gnu-sed packer qemu
+          brew install ansible coreutils gnu-sed packer
+          pip3 install pywinrm
 
       - name: Build image - ${{ matrix.stage }}
         run: |
