--- a/ansible/roles/ansible-role-my_common_defaults/tasks/Win32NT-common.yml
+++ b/ansible/roles/ansible-role-my_common_defaults/tasks/Win32NT-common.yml
@@ -224,7 +224,7 @@
       - UpdateRollups
       - Updates
   register: windows_updates
-  until: windows_updates is succeeded
+  # until: windows_updates is succeeded
 
 - name: Windows reboot
   win_reboot:
