--- a/.github/workflows/my_ubuntu-server.yml
+++ b/.github/workflows/my_ubuntu-server.yml
@@ -31,7 +31,6 @@ on:
 
 env:
   ACCELERATOR: hvf
-  VAGRANT_CLOUD_USER: peru
 
 jobs:
   my_ubuntu-server:
@@ -44,41 +43,21 @@ jobs:
           - my_ubuntu-20.04-server-amd64-virtualbox
           - my_ubuntu-20.04-server-amd64-libvirt
     steps:
-      - name: Check if image is not already built
-        run: |
-          BUILD="${{ matrix.stage }}"
-          PACKER_VAGRANT_PROVIDER="${BUILD##*-}"
-          NAME="${BUILD%-*}"
-
-          # Check if the boxes (virtualbox/libvirt) with the same git sha already exists
-          CURRENT_VERSION_DESCRIPTION_MARKDOWN="$(curl -L --silent "https://app.vagrantup.com/api/v1/box/${VAGRANT_CLOUD_USER}/${NAME}" | jq '.current_version.version as $current_version | .versions[] | select (.version == $current_version) .description_markdown')"
-          if echo "${CURRENT_VERSION_DESCRIPTION_MARKDOWN}" | grep -q "${GITHUB_SHA}"; then
-            # Skip build if the box already exists
-            CURRENT_VERSION_PROVIDER_URL="$(curl -L --silent "https://app.vagrantup.com/api/v1/box/${VAGRANT_CLOUD_USER}/${NAME}" | jq -r ".current_version.version as \$current_version | .versions[] | select (.version == \$current_version) .providers[] | select (.name == \"${PACKER_VAGRANT_PROVIDER}\") .download_url")"
-            if [ -n "${CURRENT_VERSION_PROVIDER_URL}" ]; then
-              echo "*** ${BUILD} with git sha \"${GITHUB_SHA}\" exists on Vagrant Cloud"
-              echo "::set-env name=skip::true"
-            fi
-          fi
-
       - uses: actions/checkout@v2
-        if: env.skip != 'true'
         with:
           submodules: true
 
       - name: Install packages
-        if: env.skip != 'true'
         run: |
           brew install ansible coreutils gnu-sed packer qemu
 
       - name: Build image - ${{ matrix.stage }}
-        if: env.skip != 'true'
         run: |
           export PATH=/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin:${PATH}
           ./build.sh ${{ matrix.stage }}
 
       - name: Check the created box image - ${{ matrix.stage }}
-        if: env.skip != 'true' && contains( matrix.stage, 'virtualbox' )
+        if: contains( matrix.stage, 'virtualbox' )
         run: |
           export PATH=/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin:${PATH}
           ./vagrant_init_destroy_boxes.sh /var/tmp/packer-templates-images/${{ matrix.stage }}.box
