--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -28,6 +28,7 @@ on:
       - windows.json
 
 env:
+  ACCELERATOR: hvf
   # https://github.com/ansible/ansible/issues/32499
   OBJC_DISABLE_INITIALIZE_FORK_SAFETY: YES
 
@@ -43,6 +44,10 @@ jobs:
           - windows-server-2012_r2-standard-x64-eval-virtualbox
           - windows-server-2016-standard-x64-eval-virtualbox
           - windows-server-2019-standard-x64-eval-virtualbox
+          - windows-10-enterprise-x64-eval-libvirt
+          - windows-server-2012_r2-standard-x64-eval-libvirt
+          - windows-server-2016-standard-x64-eval-libvirt
+          - windows-server-2019-standard-x64-eval-libvirt
     steps:
       - uses: actions/checkout@v2
         with:
@@ -50,7 +55,7 @@ jobs:
 
       - name: Install packages
         run: |
-          brew install ansible coreutils gnu-sed packer
+          brew install ansible coreutils gnu-sed packer qemu
           pip3 install pywinrm
 
       - name: Build image - ${{ matrix.stage }}
