--- a/.github/workflows/new-markdown-checks.yml
+++ b/.github/workflows/new-markdown-checks.yml
@@ -16,6 +16,6 @@ jobs:
       - name: markdownlint-cli
         uses: docker://avtodev/markdown-lint:v1
         with:
-#          config: .markdownlint.yml
-#          ignore: CHANGELOG.md
+          config: .markdownlint.yml
+          ignore: CHANGELOG.md
           args: '**.md'
