--- a/.github/workflows/my_linter.yml
+++ b/.github/workflows/my_linter.yml
@@ -9,7 +9,7 @@ jobs:
   env-checker:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@master
 
       - name: Check links using container
         uses: ruzickap/action-test
