--- a/.github/workflows/my_linter.yml
+++ b/.github/workflows/my_linter.yml
@@ -9,10 +9,10 @@ jobs:
   env-checker:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@2
 
       - name: Check links using container
-        uses: ruzickap/action-test
+        uses: ruzickap/action-test@master
         with:
           paths: ("ansible/roles/ansible-role-my_common_defaults" "ansible/roles/ansible-role-virtio-win")
           exclude: CHANGELOG.md
