--- a/.github/workflows/markdown-checks.yml
+++ b/.github/workflows/markdown-checks.yml
@@ -1,11 +1,11 @@
 name: markdown-checks
 
 on:
-  repository_dispatch:
-  # push:
-  #   paths:
-  #     - '**.md'
-  #     - .github/workflows/markdown-checks.yml
+  #repository_dispatch:
+  push:
+    paths:
+      - '**.md'
+      - .github/workflows/markdown-checks.yml
 
 jobs:
   markdownlint-check:
@@ -30,26 +30,26 @@ jobs:
         with:
           exclude: CHANGELOG.md
 
-  markdown-spell-check:
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@v2
+  # markdown-spell-check:
+  #   runs-on: ubuntu-18.04
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      - name: Install Node.js 12
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
+  #     - name: Install Node.js 12
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: 12.x
 
-      - name: Install markdown-spellcheck
-        run: npm install -g markdown-spellcheck
+  #     - name: Install markdown-spellcheck
+  #       run: npm install -g markdown-spellcheck
 
-      - name: Run mdspell
-        run: find . -type f \( -iname "*.md" ! -name "CHANGELOG.md" \) -exec mdspell --ignore-numbers --ignore-acronyms --report --en-gb {} \;
+  #     - name: Run mdspell
+  #       run: find . -type f \( -iname "*.md" ! -name "CHANGELOG.md" \) -exec mdspell --ignore-numbers --ignore-acronyms --report --en-gb {} \;
 
-  markdown-link-check:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
+  # markdown-link-check:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      - name: Link Checker
-        uses: gaurav-nelson/github-action-markdown-link-check@v1
+  #     - name: Link Checker
+  #       uses: gaurav-nelson/github-action-markdown-link-check@v1
