--- a/.github/workflows/markdown-checks.yml
+++ b/.github/workflows/markdown-checks.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: markdownlint-cli
-        uses: ruzickap/action-my-markdown-linter@master
+        uses: ruzickap/action-my-markdown-linter@v1
         with:
           exclude: CHANGELOG.md
 
