--- a/scripts/linux-common/packer-virt-sysprep/.github/workflows/markdown.yml
+++ b/scripts/linux-common/packer-virt-sysprep/.github/workflows/markdown.yml
@@ -19,11 +19,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: markdownlint-cli
-        uses: nosborn/github-action-markdown-cli@v1.1.1
+      - name: Markdown Lint
+        uses: ruzickap/action-my-markdown-linter@v1
         with:
-          files: .
-          ignore_files: CHANGELOG.md
+          exclude: |
+            CHANGELOG.md
 
   markdown-link-check:
     runs-on: ubuntu-latest
